--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -1,56 +1,112 @@
 {
-    "editor.smoothScrolling": true,
-    "editor.tabCompletion": "on",
-    "editor.stickyTabStops": true,
-    "editor.fontFamily": "'JetBrains Mono','JetBrainsMono Nerd Font Mono','Microsoft YaHei'",
-    "editor.bracketPairColorization.independentColorPoolPerBracketType": true,
-    "editor.defaultFormatter": "ms-vscode.cpptools",
-    "editor.fontLigatures": true,
-    "workbench.colorTheme": "Atom One Dark",
-    "workbench.preferredDarkColorTheme": "Atom One Dark",
-    "workbench.preferredLightColorTheme": "Atom One Dark",
-    "debug.allowBreakpointsEverywhere": true,
-    "code-runner.fileDirectoryAsCwd": true,
-    "code-runner.runInTerminal": true,
-    "code-runner.saveAllFilesBeforeRun": true,
-    "code-runner.saveFileBeforeRun": true,
-    "files.autoSave": "afterDelay",
-    "workbench.iconTheme": "vscode-icons",
-    "editor.fontSize": 18,
-    "terminal.external.windowsExec": "wt",
-    "terminal.integrated.cursorStyle": "line",
-    "terminal.integrated.enableBell": true,
-    "terminal.integrated.fontFamily": "'JetBrains Mono','JetBrainsMono Nerd Font Mono'",
-    "debug.console.fontSize": 18,
-    "editor.mouseWheelZoom": true,
-    "winopacity.opacity": 220,
-    "[jsonc]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
+	"editor.smoothScrolling": true,
+	"editor.tabCompletion": "on",
+	"editor.stickyTabStops": true,
+	"editor.fontFamily": "'JetBrains Mono','JetBrainsMono Nerd Font Mono','Microsoft YaHei'",
+	"editor.bracketPairColorization.independentColorPoolPerBracketType": true,
+	"editor.fontLigatures": true,
+	"workbench.colorTheme": "Atom One Dark",
+	"workbench.preferredDarkColorTheme": "Atom One Dark",
+	"workbench.preferredLightColorTheme": "Atom One Dark",
+	"debug.allowBreakpointsEverywhere": true,
+	"code-runner.fileDirectoryAsCwd": true,
+	"code-runner.runInTerminal": true,
+	"code-runner.saveAllFilesBeforeRun": true,
+	"code-runner.saveFileBeforeRun": true,
+	"files.autoSave": "afterDelay",
+	"workbench.iconTheme": "material-icon-theme",
+	"editor.fontSize": 18,
+	"terminal.external.windowsExec": "wt",
+	"terminal.integrated.cursorStyle": "line",
+	"terminal.integrated.enableBell": true,
+	"terminal.integrated.fontFamily": "'JetBrains Mono','JetBrainsMono Nerd Font Mono'",
+	"debug.console.fontSize": 18,
+	"editor.mouseWheelZoom": true,
+	"winopacity.opacity": 220,
+	"[jsonc]": {
+		"editor.defaultFormatter": "vscode.json-language-features"
+	},
+	"json.trace.server": "verbose",
+	"terminal.integrated.profiles.windows": {
+		"PowerShell": {
+			"path": "pwsh.exe",
+			"args": [
+				"-Nologo"
+			],
+			"icon": "terminal-powershell",
+		}
+	},
+	"python.languageServer": "Pylance",
+	"python.autoComplete.extraPaths": [],
+	"terminal.integrated.defaultProfile.windows": "PowerShell",
+	"editor.guides.bracketPairs": "active",
+	"[python]": {
+		"editor.defaultFormatter": "ms-python.python"
+	},
+	"pylance.insidersChannel": "daily",
+	"python.analysis.completeFunctionParens": true,
+	"python.analysis.typeCheckingMode": "basic",
+	"editor.semanticHighlighting.enabled": true,
+	"python.analysis.extraPaths": [],
+	"window.openFoldersInNewWindow": "on",
+	"window.openFilesInNewWindow": "default",
+	"git.autofetch": true,
+	"git.branchWhitespaceChar": "_",
+	"git.followTagsWhenSync": true,
+	"C_Cpp.addNodeAddonIncludePaths": true,
+	"C_Cpp.autocompleteAddParentheses": true,
+	"C_Cpp.codeAnalysis.clangTidy.enabled": true,
+	"[cpp]": {
+		"editor.wordBasedSuggestions": true
+	},
+	"editor.insertSpaces": false,
+	"python.terminal.executeInFileDir": true,
+	"html.format.indentHandlebars": true,
+	"C_Cpp.vcFormat.space.afterCastCloseParenthesis": true,
+	"C_Cpp.vcFormat.space.withinCastParentheses": true,
+	"C_Cpp.vcFormat.space.beforeInitializerListOpenBrace": true,
+	"C_Cpp.vcFormat.space.pointerReferenceAlignment": "center",
+	"C_Cpp.vcFormat.space.afterKeywordsInControlFlowStatements": false,
+	"C_Cpp.vcFormat.newLine.beforeOpenBrace.type": "newLine",
+	"C_Cpp.vcFormat.newLine.beforeOpenBrace.namespace": "newLine",
+	"C_Cpp.vcFormat.newLine.beforeOpenBrace.lambda": "newLine",
+	"C_Cpp.vcFormat.newLine.beforeOpenBrace.function": "newLine",
+	"C_Cpp.vcFormat.newLine.beforeOpenBrace.block": "newLine",
+	"C_Cpp.intelliSenseEngineFallback": "Enabled",
+	"material-icon-theme.activeIconPack": "angular_ngrx",
+	"git.enableSmartCommit": true,
+	"git.confirmSync": false,
+	"zenMode.hideActivityBar": false,
+	"material-icon-theme.folders.color": "#019fdf",
+	"material-icon-theme.files.associations": {
+		"launch.json": "vscode",
+		"tasks.json": "vscode",
+		"*.code-workspace": "vscode",
+		"settings.json": "settings",
+		"c_cpp_properties.json": "cpp",
+		"*.pyw": "python",
+		"*.lnk": "url",
+	},
+	"material-icon-theme.folders.associations": {
+		"c++": "tools",
+		"asm": "stack",
+		"shell": "src",
+	},
+	"editor.bracketPairColorization.enabled": true,
+	"workbench.colorCustomizations": {
+		"editorBracketHighlight.foreground1": "#ee9302",
+        "editorBracketHighlight.foreground2": "#ffd700",
+		"editorBracketHighlight.foreground3": "#24d600",
+        "editorBracketHighlight.foreground4": "#179fff",
+		"editorBracketHighlight.foreground5": "#da70d6",
+		"editorBracketHighlight.foreground6": "#b42c2e",
     },
-    "json.trace.server": "verbose",
-    "terminal.integrated.profiles.windows":
-        {
-            "PowerShell": 
-                {
-                    "path": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
-                    "args": ["-Nologo"],
-                    "icon": "terminal-powershell",
-                }
-        },
-    "python.languageServer": "Pylance",
-    "python.autoComplete.addBrackets": true,
-    "python.autoComplete.extraPaths": [],
-    "terminal.integrated.defaultProfile.windows": "PowerShell",
-    "editor.guides.bracketPairs": "active",
-    "workbench.settings.editor": "json",
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.python"
-    },
-    "pylance.insidersChannel": "daily",
-    "python.analysis.completeFunctionParens": true,
-    "python.analysis.typeCheckingMode": "basic",
-    "editor.semanticHighlighting.enabled": true,
-    "python.analysis.extraPaths": [],
-    "window.openFoldersInNewWindow": "on",
-    "window.openFilesInNewWindow": "default",
+	"workbench.settings.editor": "json",
+	"editor.foldingHighlight": false,
+	"[markdown]": {
+		"editor.wordWrap": "off"
+	},
+	"explorer.confirmDragAndDrop": false,
+	"editor.formatOnPaste": true,
+	"workbench.editor.enablePreview": false,
 }
