--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -1,5 +1,5 @@
 {
-	"workbench.settings.editor": "json",
+	"workbench.settings.editor": "ui",
 	"editor.smoothScrolling": true,
 	"editor.tabCompletion": "on",
 	"editor.stickyTabStops": true,
@@ -49,7 +49,6 @@
 	"editor.semanticHighlighting.enabled": true,
 	"python.analysis.extraPaths": [],
 	"window.openFoldersInNewWindow": "on",
-	"window.openFilesInNewWindow": "default",
 	"git.autofetch": true,
 	"git.branchWhitespaceChar": "_",
 	"git.followTagsWhenSync": true,
@@ -129,4 +128,5 @@
 		"nvim",
 		"ranger"
 	],
+	"git.terminalGitEditor": true,
 }
