--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -1,9 +1,8 @@
 {
-	"workbench.settings.editor": "ui",
+	"workbench.settings.editor": "json",
 	"editor.smoothScrolling": true,
 	"editor.tabCompletion": "on",
-	"editor.stickyTabStops": true,
-	"editor.fontFamily": "'JetBrains Mono','JetBrainsMono Nerd Font Mono','Microsoft YaHei'",
+	"editor.fontFamily": "'JetBrains Mono','JetBrainsMono Nerd Font Mono',Consolas",
 	"editor.bracketPairColorization.independentColorPoolPerBracketType": true,
 	"editor.fontLigatures": true,
 	"workbench.colorTheme": "Atom One Dark",
@@ -20,10 +19,10 @@
 	"terminal.external.windowsExec": "wt",
 	"terminal.integrated.cursorStyle": "line",
 	"terminal.integrated.enableBell": true,
-	"terminal.integrated.fontFamily": "'JetBrains Mono','JetBrainsMono Nerd Font Mono'",
+	"terminal.integrated.fontFamily": "'JetBrains Mono','JetBrainsMono Nerd Font Mono',Consolas",
 	"debug.console.fontSize": 18,
 	"editor.mouseWheelZoom": true,
-	"winopacity.opacity": 220,
+	"winopacity.opacity": 200,
 	"[jsonc]": {
 		"editor.defaultFormatter": "vscode.json-language-features"
 	},
@@ -76,6 +75,11 @@
 	"git.enableSmartCommit": true,
 	"git.confirmSync": false,
 	"zenMode.hideActivityBar": false,
+	"git.terminalGitEditor": true,
+	"editor.formatOnType": true,
+	"editor.stickyTabStops": true,
+	"workbench.tree.renderIndentGuides": "always",
+	"security.workspace.trust.untrustedFiles": "open",
 	"material-icon-theme.folders.color": "#019fdf",
 	"material-icon-theme.files.associations": {
 		"launch.json": "vscode",
@@ -127,6 +131,5 @@
 		"tmux",
 		"nvim",
 		"ranger"
-	],
-	"git.terminalGitEditor": true,
+	]
 }
