--- a/config/wt/settings.json
+++ b/config/wt/settings.json
@@ -4,6 +4,23 @@
     "actions": 
     [
         {
+            "command": 
+            {
+                "action": "copy",
+                "singleLine": false
+            },
+            "keys": "ctrl+c"
+        },
+        {
+            "command": 
+            {
+                "action": "splitPane",
+                "split": "auto",
+                "splitMode": "duplicate"
+            },
+            "keys": "alt+shift+d"
+        },
+        {
             "command": "unbound",
             "keys": "ctrl+shift+t"
         },
@@ -16,12 +33,8 @@
             "keys": "ctrl+n"
         },
         {
-            "command": 
-            {
-                "action": "copy",
-                "singleLine": false
-            },
-            "keys": "ctrl+c"
+            "command": "paste",
+            "keys": "ctrl+v"
         },
         {
             "command": 
@@ -31,21 +44,8 @@
             "keys": "ctrl+shift+n"
         },
         {
-            "command": "paste",
-            "keys": "ctrl+v"
-        },
-        {
             "command": "find",
             "keys": "ctrl+shift+f"
-        },
-        {
-            "command": 
-            {
-                "action": "splitPane",
-                "split": "auto",
-                "splitMode": "duplicate"
-            },
-            "keys": "alt+shift+d"
         }
     ],
     "alwaysOnTop": false,
@@ -57,24 +57,31 @@
     "experimental.rendering.software": false,
     "focusFollowMouse": true,
     "launchMode": "maximizedFocus",
+    "newTabMenu": 
+    [
+        {
+            "type": "remainingProfiles"
+        }
+    ],
     "profiles": 
     {
         "defaults": 
         {
             "antialiasingMode": "cleartype",
-            "backgroundImage": null,
-            "backgroundImageOpacity": 0.10000000000000001,
+            "backgroundImage": "C:\\Users\\Jwy20\\Pictures\\Saved Pictures\\terminal.png",
+            "backgroundImageOpacity": 1.0,
+            "backgroundImageStretchMode": "uniformToFill",
             "closeOnExit": "always",
             "colorScheme": "Dark",
             "cursorShape": "bar",
             "font": 
             {
                 "face": "JetBrainsMono Nerd Font Mono",
-                "size": 13,
+                "size": 13.0,
                 "weight": "medium"
             },
             "intenseTextStyle": "bright",
-            "opacity": 75,
+            "opacity": 0,
             "padding": "25",
             "useAcrylic": false
         },
@@ -104,7 +111,7 @@
                 "guid": "{5d11970e-7767-417f-b7b3-9aa3281e7a25}",
                 "icon": "ms-appx:///ProfileIcons/{9acb9455-ca41-5af7-950f-6bca1bc9722f}.png",
                 "name": "Linux",
-                "startingDirectory": "/root"
+                "startingDirectory": "~"
             },
             {
                 "commandline": "PLINK.EXE -load \\\"PuTTY COM Session\\\"",
@@ -125,6 +132,18 @@
                 "commandline": "c:/1.bat",
                 "guid": "{ec088a6e-f71c-4718-8ee6-c9d9e2f50344}",
                 "name": "\u6e05\u7406"
+            },
+            {
+                "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+                "hidden": false,
+                "name": "PowerShell",
+                "source": "Windows.Terminal.PowershellCore"
+            },
+            {
+                "guid": "{58ad8b0c-3ef8-5f4d-bc6f-13e4c00f2530}",
+                "hidden": false,
+                "name": "Debian",
+                "source": "Windows.Terminal.Wsl"
             }
         ]
     },
@@ -385,6 +404,51 @@
         }
     ],
     "theme": "dark",
+    "themes": 
+    [
+        {
+            "name": "legacyDark",
+            "tab": 
+            {
+                "background": null,
+                "showCloseButton": "always",
+                "unfocusedBackground": null
+            },
+            "window": 
+            {
+                "applicationTheme": "dark",
+                "useMica": false
+            }
+        },
+        {
+            "name": "legacyLight",
+            "tab": 
+            {
+                "background": null,
+                "showCloseButton": "always",
+                "unfocusedBackground": null
+            },
+            "window": 
+            {
+                "applicationTheme": "light",
+                "useMica": false
+            }
+        },
+        {
+            "name": "legacySystem",
+            "tab": 
+            {
+                "background": null,
+                "showCloseButton": "always",
+                "unfocusedBackground": null
+            },
+            "window": 
+            {
+                "applicationTheme": "system",
+                "useMica": false
+            }
+        }
+    ],
     "trimBlockSelection": true,
     "useAcrylicInTabRow": true,
     "windowingBehavior": "useExisting",
