--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -3,7 +3,6 @@
 	"editor.smoothScrolling": true,
 	"editor.tabCompletion": "on",
 	"editor.fontFamily": "'JetBrains Mono','JetBrainsMono Nerd Font Mono',Consolas,'Microsoft YaHei'",
-	"editor.bracketPairColorization.independentColorPoolPerBracketType": true,
 	"editor.fontLigatures": true,
 	"workbench.colorTheme": "Atom One Dark",
 	"workbench.preferredDarkColorTheme": "Atom One Dark",
@@ -39,9 +38,10 @@
 	"python.languageServer": "Pylance",
 	"python.autoComplete.extraPaths": [],
 	"terminal.integrated.defaultProfile.windows": "PowerShell",
-	"editor.guides.bracketPairs": "active",
+	"editor.guides.bracketPairs": true,
 	"[python]": {
-		"editor.defaultFormatter": "ms-python.python"
+		"editor.defaultFormatter": "ms-python.python",
+		"editor.formatOnType": true
 	},
 	"python.analysis.completeFunctionParens": true,
 	"python.analysis.typeCheckingMode": "basic",
@@ -55,7 +55,8 @@
 	"C_Cpp.autocompleteAddParentheses": true,
 	"C_Cpp.codeAnalysis.clangTidy.enabled": true,
 	"[cpp]": {
-		"editor.wordBasedSuggestions": true
+		"editor.wordBasedSuggestions": true,
+		"editor.defaultFormatter": "ms-vscode.cpptools"
 	},
 	"editor.insertSpaces": false,
 	"python.terminal.executeInFileDir": true,
@@ -70,14 +71,13 @@
 	"C_Cpp.vcFormat.newLine.beforeOpenBrace.lambda": "newLine",
 	"C_Cpp.vcFormat.newLine.beforeOpenBrace.function": "newLine",
 	"C_Cpp.vcFormat.newLine.beforeOpenBrace.block": "newLine",
-	"C_Cpp.intelliSenseEngineFallback": "Enabled",
+	"C_Cpp.intelliSenseEngineFallback": "disabled",
 	"material-icon-theme.activeIconPack": "angular_ngrx",
 	"git.enableSmartCommit": true,
 	"git.confirmSync": false,
 	"zenMode.hideActivityBar": false,
 	"git.terminalGitEditor": true,
 	"editor.formatOnType": true,
-	"editor.stickyTabStops": true,
 	"workbench.tree.renderIndentGuides": "always",
 	"security.workspace.trust.untrustedFiles": "open",
 	"material-icon-theme.folders.color": "#019fdf",
@@ -96,7 +96,7 @@
 		"shell": "src",
 		"godot": "tools",
 	},
-	"editor.bracketPairColorization.enabled": true,
+	"editor.guides.bracketPairsHorizontal": true,
 	"workbench.colorCustomizations": {
 		"editorBracketHighlight.foreground1": "#ee9302",
 		"editorBracketHighlight.foreground2": "#ffd700",
@@ -122,7 +122,6 @@
 	"editor.formatOnPaste": true,
 	"editor.useTabStops": false,
 	"workbench.editor.enablePreview": false,
-	"terminal.integrated.enableMultiLinePasteWarning": false,
 	"terminal.integrated.fontSize": 15,
 	"terminal.integrated.localEchoExcludePrograms": [
 		"vim",
@@ -131,5 +130,36 @@
 		"tmux",
 		"nvim",
 		"ranger"
-	]
+	],
+	"terminal.integrated.enableMultiLinePasteWarning": false,
+	"explorer.confirmDelete": false,
+	"editor.stickyTabStops": true,
+	"html.format.indentInnerHtml": true,
+	"markdown-image.base.uploadMethod": "GitHub",
+	"markdown-image.github.token": "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",
+	"markdown-image.github.repository": "https://github.com/jwy2008/image",
+	"markdown-image.github.path": "/image",
+	"security.allowedUNCHosts": [
+		"wsl.localhost"
+	],
+	"vscodeGoogleTranslate.preferredLanguage": "Chinese (Simplified)",
+	/// clangd
+	"clangd.checkUpdates": true,
+	"clangd.arguments": [
+		"--background-index", /// 在后台自动分析文件（基于complie_commands)
+		"--compile-commands-dir=${workspaceFolder}/gcc/build", /// 标记compelie_commands.json文件的目录位置
+		"-j=12", /// 同时开启的任务数量
+		"--query-driver=C:/Program Files/llvm-mingw/bin/clang++.exe", /// clang 路径，使用命令 which clang++ 获取的的路径
+		"--clang-tidy", /// clang-tidy功能
+		"--clang-tidy-checks=performance-*,bugprone-*",
+		"--all-scopes-completion", /// 全局补全（会自动补充头文件）
+		"--completion-style=detailed", /// 更详细的补全内容
+		"--header-insertion=iwyu", /// 补充头文件的形式
+		"--pch-storage=disk", /// pch优化的位置
+		"--log=verbose",
+		"--header-insertion=never"
+	],
+	"clangd.path": "c:\\Users\\Jwy20\\.vscode\\extensions\\ms-vscode.cpptools-1.17.5-win32-x64",
+	"clangd.detectExtensionConflicts": false,
+	"editor.formatOnSave": true,
 }
